This is a partial fix for whitespace problem

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,10 +52,15 @@ div.planner {
     justify-content: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 640px) {
     div.wrapper,
     div.planner {
         flex-direction: column;
+    }
+
+    div.degree{
+      min-width: 100%;
+      position: static;
     }
 }
 
@@ -87,4 +92,9 @@ div.optional {
             display: none;
         }
     }
+}
+
+div.setting{
+    float: left;
+    height: 20px;
 }
